tests/route_example_with_target_port/deployment_with_multiple_ports.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: routes-world
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload-with-multiple-ports
  namespace: routes-world
  labels:
    app: routes-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: routes-world
  template:
    metadata:
      labels:
        app: routes-world
    spec:
      containers:
      - name: routes-world
        image: quay.io/shfa/routes-world:latest
        ports:
        - containerPort: 8000  # containerport1
        - containerPort: 8050  # containerport2
        - containerPort: 8090  # containerport3
---
apiVersion: v1
kind: Service
metadata:
  name: routes-world-svc
  namespace: routes-world
spec:
  ports:
    - name: first-port
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: second-port
      protocol: TCP
      port: 8050
      targetPort: 8050
    - name: third-port 
      protocol: TCP
      port: 8090
      targetPort: 8090
  selector:
    app: routes-world
