test_outputs/connlist/route_example_with_target_port_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN {ingress-controller} => routes-world/workload-with-multiple-ports[Deployment]:

ALLOWED LIST:
	ALLOWED TCP:[8000] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (ALLOWED)
			[Route] routes-world/route-1 // service routes-world-svc

	ALLOWED TCP:[8090] due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (ALLOWED)
			[Route] routes-world/route-2 // service routes-world-svc

DENIED LIST:
	DENIED TCP:[1-7999,8001-8089,8091-65535], UDP, SCTP due to the following policies // rules:
		EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
		INGRESS DIRECTION (DENIED)
			Route list:
				- [Route] routes-world/route-1 // service routes-world-svc (protocols/ports not referenced)
				- [Route] routes-world/route-2 // service routes-world-svc (protocols/ports not referenced)



#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => routes-world/workload-with-multiple-ports[Deployment]
routes-world/workload-with-multiple-ports[Deployment] => 0.0.0.0-255.255.255.255
